<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>

    <groupId>uk.ac.liv.gdsl</groupId>
    <artifactId>GeoMason-light</artifactId>
    <version>1.12</version>
	
	<name>${project.groupId}:${project.artifactId}</name>
    <description>
		GeoMason-light is an advanced and optional extension of MASON, a popular agent-based modeling toolkit. 
		This extension enriches MASON's capabilities by introducing robust support for both vector and raster geospatial data. 
		By building upon the functionality of its predecessor, GeoMason, the new GeoMason-light framework offers a lighter, more efficient, and versatile approach to integrate geospatial data into agent-based simulations
    </description>
    <url>https://github.com/g-filomena/GeoMason-light</url>
	
	<developers>
		<developer>
		  <name>Gabriele Filomena</name>
		  <email>gabriele.filomena@liverpool.ac.uk</email>
		  <organization>University of Liverpool, Geographic Data Science Lab</organization>
		  <organizationUrl>https://www.liverpool.ac.uk/geographic-data-science/</organizationUrl>
		</developer>
	 </developers>
	 
	<scm>
	  <connection>scm:git:git://github.com/g-filomena/GeoMason-light.git</connection>
	  <developerConnection>scm:git:ssh://github.com:g-filomena/GeoMason-light.git</developerConnection>
	  <url>http://github.com/g-filomena/GeomMason-light/tree/master</url>
	</scm>
	
    <properties>
        <maven.compiler.source>1.8</maven.compiler.source>
        <maven.compiler.target>1.8</maven.compiler.target>
    </properties>

    <dependencies>
        <!-- JavaTuples -->
        <dependency>
            <groupId>org.javatuples</groupId>
            <artifactId>javatuples</artifactId>
            <version>1.2</version>
        </dependency>

        <!-- JTS Core -->
        <dependency>
            <groupId>org.locationtech.jts</groupId>
            <artifactId>jts-core</artifactId>
            <version>1.19.0</version>
        </dependency>

        <!-- Mason -->
        <dependency>
            <groupId>edu.gmu.eclab</groupId>
            <artifactId>mason</artifactId>
            <version>21</version>
            <scope>system</scope>
            <systemPath>${project.basedir}/lib/mason-21.jar</systemPath>
        </dependency>
    </dependencies>

    <!-- Distribution management -->
    <distributionManagement>
        <snapshotRepository>
            <id>ossrh</id>
            <url>https://s01.oss.sonatype.org/content/repositories/snapshots</url>
        </snapshotRepository>
		<repository>
			<id>ossrh</id>
			<url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
		</repository>
    </distributionManagement>

    <build>
        <plugins>
			<plugin>
			  <groupId>org.sonatype.plugins</groupId>
			  <artifactId>nexus-staging-maven-plugin</artifactId>
			  <version>1.6.7</version>
			  <extensions>true</extensions>
			  <configuration>
				<serverId>ossrh</serverId>
				<nexusUrl>https://s01.oss.sonatype.org/</nexusUrl>
				<autoReleaseAfterClose>true</autoReleaseAfterClose>
			  </configuration>
			</plugin>	
				
            <!-- Compiler Plugin -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                    <encoding>UTF-8</encoding>
                </configuration>
            </plugin>

            <!-- Javadoc -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>3.3.0</version>
                <configuration>
                    <doclint>all,-missing</doclint>
                </configuration>
                <executions>
                    <execution>
                        <id>attach-javadocs</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <!-- Sources -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>3.2.1</version>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
			
			<!-- Copy POM to target -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-resources-plugin</artifactId>
				<version>3.2.0</version>
				<executions>
					<execution>
						<id>copy-pom</id>
						<phase>initialize</phase>
						<goals>
							<goal>copy-resources</goal>
						</goals>
						<configuration>
							<outputDirectory>${project.build.directory}</outputDirectory>
							<resources>
								<resource>
									<directory>${project.basedir}</directory>
									<includes>
										<include>pom.xml</include>
									</includes>
								</resource>
							</resources>
						</configuration>
					</execution>
				</executions>
			</plugin>
			
			<!-- Checksum -->
			<plugin>
				<groupId>net.ju-n.maven.plugins</groupId>
				<artifactId>checksum-maven-plugin</artifactId>
				<version>1.4</version>
				<executions>
					<execution>
						<id>generate-artifact-checksum</id>
						<phase>package</phase>
						<goals>
							<goal>files</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<algorithms>
						<algorithm>MD5</algorithm>
						<algorithm>SHA-1</algorithm>
					</algorithms>
					<fileSets>
						<fileSet>
							<directory>${project.build.directory}</directory>
							<includes>
                                <include>${project.build.finalName}.jar</include>
                                <include>${project.build.finalName}.pom</include>
                                <include>${project.build.finalName}-javadoc.jar</include>
                                <include>${project.build.finalName}-sources.jar</include>
                            </includes>
						</fileSet>
					</fileSets>
				</configuration>
			</plugin>
		
			<!-- Signing -->
			<plugin>
				<groupId>org.simplify4u.plugins</groupId>
				<artifactId>sign-maven-plugin</artifactId>
				<version>1.0.1</version>
				<executions>
					<execution>
						<goals>
							<goal>sign</goal>
						</goals>
						<configuration>
							<serverId>sign-key-id</serverId>
						</configuration>
					</execution>
				</executions>
			</plugin>
        
		</plugins>
    </build>

    <licenses>
        <license>
            <name>GNU General Public License, Version 3.0</name>
            <url>https://www.gnu.org/licenses/gpl-3.0.html</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <organization>
        <name>University of Liverpool, Department of Geography and Planning, Geographic Data Science Lab</name>
        <url>https://www.liverpool.ac.uk/geography-and-planning/</url>
    </organization>

</project>